Fix overflow

--- a/style.css
+++ b/style.css
@@ -23,8 +23,8 @@ body {
 
 #content {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    gap: 5rem;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    gap: 2rem;
 
     margin: 1.2rem;
 }
@@ -92,6 +92,7 @@ img {
 
 .project-list>button {
     background-color: rgb(238, 168, 154);
+    overflow-wrap: break-word;
 }
 
 .active-project {
@@ -104,15 +105,18 @@ img {
     display: flex;
     flex-direction: column;
     gap: 0.6rem;
+
+    padding: 1rem;
+    box-shadow: 5px 10px 18px rgba(0, 0, 0, 0.548);
 }
 
 .project-header {
     display: flex;
-    gap: 0.3rem;
+    flex-direction: column;
 }
 
 .project-name {
-    min-width: 0;
+    overflow-wrap: break-word;
 }
 
 .tasks-remaining {
@@ -128,6 +132,7 @@ img {
 
 .task-list>button {
     background-color: #eea89a;
+    overflow-wrap: break-word;
 }
 
 .project-actions {
@@ -155,10 +160,17 @@ img {
     display: flex;
     flex-direction: column;
     gap: 0.3rem;
+
+    padding: 1rem;
+    box-shadow: 5px 10px 18px rgba(0, 0, 0, 0.548);
 }
 
 .task-title {
-    min-width: 0;
+    overflow-wrap: break-word;
+}
+
+.task-description {
+    overflow-wrap: break-word;
 }
 
 .task-actions {
